tests/ui/feature-gates/issue-43106-gating-of-macro_use.stderr
error: arguments to `macro_use` are not allowed here
  --> $DIR/issue-43106-gating-of-macro_use.rs:12:17
   |
LL |     mod inner { #![macro_use(my_macro)] }
   |                 ^^^^^^^^^^^^^^^^^^^^^^^

error: arguments to `macro_use` are not allowed here
  --> $DIR/issue-43106-gating-of-macro_use.rs:9:1
   |
LL | #[macro_use(my_macro)]
   | ^^^^^^^^^^^^^^^^^^^^^^

error: arguments to `macro_use` are not allowed here
  --> $DIR/issue-43106-gating-of-macro_use.rs:6:1
   |
LL | #![macro_use(my_macro)]
   | ^^^^^^^^^^^^^^^^^^^^^^^

error: valid forms for the attribute are `#[macro_use(name1, name2, ...)]` and `#[macro_use]`
  --> $DIR/issue-43106-gating-of-macro_use.rs:15:5
   |
LL |     #[macro_use = "2700"] struct S;
   |     ^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 4 previous errors

